--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,8 @@
 /config/server.crt
 /config/server.csr
 /config/server.key
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
