--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,10 @@
 AllCops:
   TargetRubyVersion: 3.1
   NewCops: enable
+  Exclude:
+    - "bin/update"
+    - "bin/yarn"
+    - "db/schema.rb"
 
 Style/StringLiterals:
   Enabled: true
@@ -10,14 +14,26 @@ Style/StringLiteralsInInterpolation:
   Enabled: true
   EnforcedStyle: double_quotes
 
-Layout/LineLength:
-  Max: 120
-
 Style/Documentation:
   Enabled: false
 
 Style/TrailingCommaInHashLiteral:
   EnforcedStyleForMultiline: comma
 
+Style/HashSyntax:
+  EnforcedShorthandSyntax: never
+
+Layout/LineLength:
+  Max: 120
+
+Layout/EndAlignment:
+  EnforcedStyleAlignWith: start_of_line
+
+Layout/ArgumentAlignment:
+  EnforcedStyle: with_fixed_indentation
+
 Layout/MultilineAssignmentLayout:
   EnforcedStyle: same_line
+
+Layout/CaseIndentation:
+  EnforcedStyle: end
